--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" href="/imagenes/logo2.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="stylesheet" href="/Version Bootstrap/estilos/estilos.css">
+    <link rel="stylesheet" href="/estilos/estilos.css">
     <link href="https://fonts.googleapis.com/css2?family=Metal+Mania&family=Michroma&family=Nunito:wght@200&display=swap" rel="stylesheet">
 
   </head>
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg p-3 mb0 bg-dark text-white">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img class="logo" src="/imagenes/logo2.png" alt="logo">
+            <img class="logo" src="/imagenes/logo2.png" alt="logo" width="150px">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
