se arreglo errores

--- a/domos.html
+++ b/domos.html
@@ -50,22 +50,22 @@
         <div class="carousel-item active">
           <img src="/imagenes/fondo.png" class="d-block w-100" alt="Domo Encanto" width="">
           <div class="carousel-caption d-none d-md-block">
-            <h2 class="bg-warning text-dark mb-0">Domo Encanto</h2>
-            <p class="bg-warning text-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus eum pariatur ipsam animi, excepturi aperiam voluptates. Qui ab ipsum possimus corporis vero magni, modi itaque, atque nam nobis veritatis similique. Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio dignissimos iste natus omnis laborum officiis atque. Nihil similique doloribus aspernatur? Quos, autem amet. Laborum rem consectetur omnis possimus eum neque!.</p>
+            <h2 class="bg-warning text-dark mb-0 opacity-75">Domo Encanto</h2>
+            <p class="bg-warning text-dark opacity-75">Lorem ipsum dolor sit amet consectetur  iste natus omnis laborum officiis atque. Nihil similique doloribus aspernatur? Quos, autem amet. Laborum rem consectetur omnis possimus eum neque!.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="/imagenes/nosotros.png" class="d-block w-100" alt="Domo Luz">
           <div class="carousel-caption d-none d-md-block">
-            <h2 class="bg-warning text-dark mb-0">Domo Luz</h2>
-            <p class="bg-warning text-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis error voluptates accusantium consequatur! Porro, corrupti ea. Sed quas vel sint rem, quam similique fugiat consectetur, deserunt mollitia, odio veniam debitis! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Non, ab sint nobis repellat incidunt hic obcaecati, doloremque minus amet quae expedita nam sapiente. Non, voluptatibus corrupti pariatur ad fugit similique..</p>
+            <h2 class="bg-warning text-dark mb-0 opacity-75">Domo Luz</h2>
+            <p class="bg-warning text-dark opacity-75">Lont nobis repellat incidunt hic obcaecati, doloremque minus amet quae expedita nam sapiente. Non, voluptatibus corrupti pariatur ad fugit similique..</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="/imagenes/domo2.png" class="d-block w-100" alt="Domo Madre Sol">
           <div class="carousel-caption d-none d-md-block">
-            <h2 class="bg-warning text-dark mb-0">Domo Madre Sol</h2>
-            <p class="bg-warning text-dark">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta assumenda doloremque consequatur minima, sequi voluptates? Provident quos voluptas pariatur dolore culpa rem deleniti similique doloribus aspernatur nobis cumque, aperiam dicta. Lorem ipsum dolor sit amet consectetur adipisicing elit. Reiciendis reprehenderit officia eos aperiam incidunt! Quibusdam iste unde voluptate, eos error beatae necessitatibus, quidem ab dignissimos animi quaerat at fuga asperiores!.</p>
+            <h2 class="bg-warning text-dark mb-0 opacity-75">Domo Madre Sol</h2>
+            <p class="bg-warning text-dark opacity-75">orem ipsum dolor sit amet unt! Quibusdam iste unde voluptate, eos error beatae necessitatibus, quidem ab dignissimos animi quaerat at fuga asperiores!.</p>
           </div>
         </div>
       </div>
