--- a/domos.html
+++ b/domos.html
@@ -59,7 +59,7 @@
           <img src="/imagenes/nosotros.png" class="d-block w-100" alt="Domo Luz">
           <div class="carousel-caption d-none d-md-block">
             <h2 class="bg-warning text-dark mb-0 opacity-75">Domo Luz</h2>
-            <p class="bg-warning text-dark opacity-75">Lohnt nobis repellat incidunt hic obcaecati, doloremque minus amet quae expedita nam sapiente. Non, voluptatibus corrupti pariatur ad fugit similique..</p>
+            <p class="bg-warning text-dark opacity-75">Lont nobis repellat incidunt hic obcaecati, doloremque minus amet quae expedita nam sapiente. Non, voluptatibus corrupti pariatur ad fugit similique..</p>
           </div>
         </div>
         <div class="carousel-item">
