--- a/domos.html
+++ b/domos.html
@@ -66,7 +66,7 @@
           <img src="/imagenes/domo2.png" class="d-block w-100" alt="Domo Madre Sol">
           <div class="carousel-caption d-none d-md-block">
             <h2 class="bg-warning text-dark mb-0 opacity-75">Domo Madre Sol</h2>
-            <p class="bg-warning text-dark opacity-75">orem ipsum dolor sit amet unt! Quibusdam iste unde voluptate, eos error beatae necessitatibus, quidem ab dignissimos animi quaerat at fuga asperiores!.</p>
+            <p class="bg-warning text-dark opacity-75">orem ipsum dolor sit amet unt! Quibusdam iste unde voluptate, eos error beatae necessitatibus, quidem ab dignissimos animi quaerat at fuga aspedasdariores!.</p>
           </div>
         </div>
       </div>
