--- a/eventos.html
+++ b/eventos.html
@@ -25,9 +25,9 @@
                 <li class="nav-item fs-1">
                     <a class="nav-link active p-3 mb-2 bg-dark text-white" aria-current="page" href="index.html">Inicio</a>
                   </li>
-              <li class="nav-item fs-1">
-                <a class="nav-link active p-3 mb-2 bg-dark text-white" aria-current="page" href="nosotros.html">Nosotros</a>
-              </li>
+                  <li class="nav-item fs-1">
+                    <a class="nav-link active p-3 mb-2 bg-dark text-white" aria-current="page" href="galeria.html">Galeria</a>
+                  </li>
               <li class="nav-item fs-1">
                 <a class="nav-link active p-3 mb-2 bg-dark text-white" aria-current="page"  href="eventos.html">Eventos</a>
               </li>
@@ -42,6 +42,64 @@
         </div>
       </nav>
     </header>
+    <section>
+
+      <article class="bg-image" >
+          <div class="title text-center py-5">
+            <h1 class="">Eventos</h1>
+          </div>
+
+          <div class="row mx-5"> 
+            
+            <div class="col m-5 casamiento">
+
+              <div class="card " style="width: 300px;">
+              <img src="imagenes/quince.jpg" alt="quince" class="card.img-top ">
+              </div>
+              <div class="card-body text-center">
+                <h2>Fiesta De XV</h2>
+                <p class="card-text text-center">
+                  Festeja con Nosotros Tu fiesta soñada y vivi una noche magica con las personas que mas amas
+                </p>
+                <a href="#" class="btn btn-warning">Más Informacion</a>
+              </div>
+
+            </div>
+
+            <div class="col m-5 casamiento" >
+
+              <div class="card text-center" style="width: 300px;">
+              <img src="imagenes/casamiento.jpg" alt="casamiento" class="card.img-top">
+              </div>
+              <div class="card-body text-center">
+                <h2>Casamiento</h2>
+                <p class="card-text text-center">
+                  Festeja con Nosotros el dia mas importante de sus vidas, nostros nos encargaremos que sea inolvidable
+                </p>
+                <a href="#" class="btn btn-warning">Más Informacion</a>
+              </div>
+
+            </div>
+
+            <div class="col m-5 casamiento">
+
+              <div class="card" style="width: 340px;">
+              <img src="imagenes/formal.jpg" alt="eventos" class="card.img-top text-center ">
+              </div>
+              <div class="card-body text-center">
+                <h2>Eventos Formales</h2>
+                <p class="card-text text-center">
+                  Organiza con nosotros eventos formales , como reuniones de trabajo o exposiciones de algun proyecto
+                </p>
+                <a href="#" class="btn btn-warning">Más Informacion</a>
+              </div>
+
+            </div>
+
+
+          </div>
+      </article>
+    </section>
     <footer>
       <div class="container-fluid">
 
