--- a/domos.html
+++ b/domos.html
@@ -24,9 +24,9 @@
               <li class="nav-item fs-1">
                   <a class="nav-link active p-3 mb-2 bg-dark text-white" aria-current="page" href="index.html">Inicio</a>
                 </li>
-            <li class="nav-item fs-1">
-              <a class="nav-link active p-3 mb-2 bg-dark text-white" aria-current="page" href="nosotros.html">Nosotros</a>
-            </li>
+                <li class="nav-item fs-1">
+                  <a class="nav-link active p-3 mb-2 bg-dark text-white" aria-current="page" href="galeria.html">Galeria</a>
+                </li>
             <li class="nav-item fs-1">
               <a class="nav-link active p-3 mb-2 bg-dark text-white" aria-current="page"  href="eventos.html">Eventos</a>
             </li>
