--- a/galeria.html
+++ b/galeria.html
@@ -2,7 +2,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nosotros</title>
+    <title>Galeria</title>
     <link rel="icon" href="/imagenes/logo2.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="stylesheet" href="css/estilos.css">
@@ -25,9 +25,9 @@
                 <li class="nav-item fs-1">
                     <a class="nav-link active p-3 mb-2 bg-dark text-white" aria-current="page" href="index.html">Inicio</a>
                   </li>
-              <li class="nav-item fs-1">
-                <a class="nav-link active p-3 mb-2 bg-dark text-white" aria-current="page" href="nosotros.html">Nosotros</a>
-              </li>
+                  <li class="nav-item fs-1">
+                    <a class="nav-link active p-3 mb-2 bg-dark text-white" aria-current="page" href="galeria.html">Galeria</a>
+                  </li>
               <li class="nav-item fs-1">
                 <a class="nav-link active p-3 mb-2 bg-dark text-white" aria-current="page"  href="eventos.html">Eventos</a>
               </li>
@@ -42,6 +42,34 @@
         </div>
       </nav>
     </header>
+        <section>
+          <article>
+            <div class="text-center">
+              <h1>Galeria</h1>
+              <p>Aca les mostramos uno de nuestros eventos</p>
+              <div class="row galeria">
+                <div class="col-lg-4 col-md-6 col-sm-12  columnas">
+                  <img src="imagenes/fiesta1.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 columnas">
+                  <img src="imagenes/fiesta2.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 columnas">
+                  <img src="imagenes/fiesta3.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 columnas">
+                  <img src="imagenes/fiesta4.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 columnas">
+                  <img src="imagenes/fiesta5.jpg" alt="">
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-12 columnas">
+                  <img src="imagenes/fiesta6.jpg" alt="">
+                </div>
+              </div>
+            </div>
+          </article>
+        </section>
     <footer>
       <div class="container-fluid">
 
